Fix scrollbars

--- a/app/assets/stylesheets/demos/demos.css.scss
+++ b/app/assets/stylesheets/demos/demos.css.scss
@@ -6,7 +6,6 @@ div.demoIndexView {
 #index-sidebar {
   width: 200px;
   height: 100%;
-  overflow: scroll;
   display: inline-block;
   float: left;
   padding: 10px;
@@ -19,7 +18,6 @@ div.demoIndexView {
 
 
 #index-sidebar-list {
-  overflow: scroll;
   padding: 10px;
   margin-top: 10px;
   float: left;
