--- a/app/assets/stylesheets/streams.css.scss
+++ b/app/assets/stylesheets/streams.css.scss
@@ -8,10 +8,6 @@
 
 }
 
-#stream-list {
-  overflow: scroll;
-}
-
 div.user-stream {
   padding: 15px;
 }
